--- a/projcinema/src/adminBundle/Resources/views/Cinema/addcinema.html.twig
+++ b/projcinema/src/adminBundle/Resources/views/Cinema/addcinema.html.twig
@@ -6,7 +6,7 @@
 <div class="container">
     <div class="container-fluid">
         <h2>Ajouter un cinéma</h2>
-        <form>
+        <form action=>
             <br>
             <div class="form-group">
                 <label for="">Nom :</label>
