--- a/projcinema/src/adminBundle/Resources/views/Default/index.html.twig
+++ b/projcinema/src/adminBundle/Resources/views/Default/index.html.twig
@@ -12,7 +12,7 @@
             <div class="col-md-8">{{ cine.nom }}</div>
             <div class="col-md-4">
                 <a href="{{ path('detailcinema', {'id': cine.id}) }}" class="btn btn-success">Détail</a>
-                <a href="" class="btn btn-success"><span class="glyphicon glyphicon-trash"></span></a>
+                <a href="{{ path('detailcinema', {'id': cine.id}) }}" class="btn btn-default"><span class="glyphicon glyphicon-trash"></span></a>
             </div>
         {% endfor %}
         </div>
