--- a/projcinema/src/adminBundle/Resources/views/Cinema/addcinema.html.twig
+++ b/projcinema/src/adminBundle/Resources/views/Cinema/addcinema.html.twig
@@ -6,24 +6,24 @@
 <div class="container">
     <div class="container-fluid">
         <h2>Ajouter un cinéma</h2>
-        <form action=>
-            <br>
+
+        {{ form_start(form) }}
             <div class="form-group">
-                <label for="">Nom :</label>
-                <input type="text" class="form-control" placeholder="Entrez le nom du cinema">
+                <label for="">{{ form_label(form.nom) }}</label>
+                {{ form_widget(form.nom) }}
             </div>
             <br>
             <div class="form-group">
-                <label for="">Adresse :</label>
-                <input type="text" class="form-control" placeholder="Entrez l'adresse du cinema">
+                <label for="">{{ form_label(form.adresse) }}</label>
+                {{ form_widget(form.adresse) }}
             </div>
             <br>
             <div class="form-group">
-                <label for="">Accessibiltée :</label>
-                <input type="checkbox" class="form-check-input">
-            </div>
-            <button type="submit" class="btn btn-primary">Ajouter</button>
-        </form>
+                {{ form_widget(form.accessiblite) }}
+            </div> 
+        {{ form_end(form) }}
+
     </div>
-</div> 
+</div>
+
 {% endblock %}
